--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@watchman9527/react-native-washington-server",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/MonthWeek/react-native-washington-server.git"
@@ -14,11 +14,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "react-native"
+    "react-native-washington-server"
   ],
   "author": {
     "name": "watchman9527",
-    "email": "xxx@example.com"
+    "email": "watchman9527@example.com"
   },
   "license": "MIT",
   "licenseFilename": "LICENSE",
